--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2015-09-05
+% \update      2016-02-13
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -49,6 +49,12 @@
    \url{http://www.fluidsynth.org/}
    2014.
 
+   \bibitem{combine}
+   Jay Capela Music
+   \emph{"Combine": A Seq24 Demonstration}
+   \url{https://www.youtube.com/watch?v=fUiXbVT0bJQ}
+   2010.
+
    \bibitem{jack}
    JACK team
    \emph{JACK Audio Connection Kit}
@@ -85,6 +91,36 @@
    \emph{The home site for the Sequencer64 looping sequencer.}
    \url{http://www.filter24.org/seq24/download.html}
    2010.
+
+   \bibitem{seq24demo1}
+   pneumanlsd.
+   \emph{Linux audio demo: Live sequencing with seq24}
+   \url{https://www.youtube.com/watch?v=f8zLV0vlSpY}
+   2010.
+
+   \bibitem{seq24demo2}
+   synthWF.
+   \emph{Misty Corridor - Seq24 (with QSynth)}
+   \url{https://www.youtube.com/watch?v=RH99zHvffGQ}
+   2012.
+
+   \bibitem{seq24part1}
+   pneumanlsd.
+   \emph{Linux music tutorial: seq24, part 1}
+   \url{https://www.youtube.com/watch?v=J2WDHS1wYeM}
+   2010.
+   
+   \bibitem{seq24part2}
+   pneumanlsd.
+   \emph{Linux music tutorial: seq24, part 2}
+   \url{https://www.youtube.com/watch?v=i3Vpi3oxdqk}
+   2010.
+
+   \bibitem{seq24launchpad}
+   Seq24 Team.
+   \emph{The home site for the Sequencer64 looping sequencer.}
+   \url{https://launchpad.net/seq24}
+   2016.
 
    \bibitem{sequencer64}
    Chris Ahlstrom.
