Added description of sequence editor scrolling actions.

--- a/tex/seq64_event_editor.tex
+++ b/tex/seq64_event_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-01-02
-% \update      2016-01-10
+% \update      2016-02-17
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -86,6 +86,10 @@
    The event frame is the event-list shown on the left side of the
    event editor.  It is accompanied by a vertical scroll-bar, for moving one
    line or one page at a time.
+
+   Also note that mouse or touchpad scrolling can be used to move up and down
+   in the event list.  This movement is even easier than reaching for the
+   scrollbars.
 
 \subsubsection{Event Frame / Data Items}
 \label{subsec:seq64_event_frame_data}
