Documentation for version 0.9.9.18.

--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2015-11-03
+% \update      2016-02-21
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -181,7 +181,8 @@
    \index{keep queue}
    \index{queue!keep}
    The "keep queue" functionality allows the queue to be held without
-   holding down a button the whole time.
+   holding down a button the whole time.  Pattern toggles occur at the end of
+   cycle, rather than being set immediately.
 
 \subsubsection{Concepts / Terms / replace}
 \label{subsubsec:concepts_terms_replace}
