--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-02-15
+% \update      2016-02-21
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -608,6 +608,9 @@
    assigned in the "rc" file.
 	activates permanent queue mode until you use the temporary 
 	queue function again pressing \texttt{Right Ctrl}. 
+   After pressing the "keep queue" key, individual pattern
+   toggles will occur at the end of the current cycle rather than immediately.
+   “Keep queue” mode is canceled by pressing the Queue key (right Ctrl).
 
    This key can be changed in the
    \textbf{File / Options / Keyboard / Keep queue} field.
