--- a/tex/docs-structure.tex
+++ b/tex/docs-structure.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-04-20
-% \update      2015-09-04
+% \update      2016-02-28
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -53,6 +53,11 @@
 
 \usepackage{longtable}        % For making multi-page tables
 \usepackage{makeidx}          % For making an index
+
+% Let's try to reduce the size of quotations.
+
+\usepackage{relsize,etoolbox}          % http://ctan.org/pkg/{relsize,etoolbox}
+\AtBeginEnvironment{quotation}{\smaller}   % Step font down one size relatively
 
 % Doesn't seem to do anything:
 %
