--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2016-02-21
+% \update      2016-02-28
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -24,6 +24,27 @@
 ]{article}
 
 \input{docs-structure}                 % specifies document structure and layout
+
+% Replacing normal header/footer with a fancier version.  These two symbols of
+% document class were showing up as "unused" in the log file.
+%
+% headinclude,
+% footinclude,
+%
+% So we add the fancyhdr package, clear the default layout, and set it up for
+% our wider pages.
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead{}
+\fancyfoot{}
+\fancyheadoffset{0.005\textwidth}
+\lhead{Sequencer64 Live MIDI Sequencer}
+\chead{}
+\rhead{User Manual}
+\lfoot{}
+\cfoot{\thepage}
+\rfoot{}
 
 \makeindex
 
@@ -357,6 +378,8 @@
 
 % The following "input" sections are stored in separate files of the same
 % name with ".tex" appended.
+
+\rhead{\rightmark}         % shows section number and section name
 
 % Important Concepts
 
