Minor updates to pattern editor and references.

--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-02-20
+% \update      2016-03-13
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -38,6 +38,17 @@
       \item \textbf{Bottom Panel}
       \item \textbf{Common Actions}
    \end{enumber}
+
+   Before we describe this window, there are some peculiarities to recognize.
+   First, if the pattern is empty when play is started, the progress bar will
+   not move.  It moves only if there are events to play in the pattern.
+   Second, to add a note, one must press the right mouse button (the pointer
+   changes to a pencil) and, while holding it, press the left mouse button.  Or
+   click in the pattern editor, press "p" to select the pencil mode, then
+   click/drag to add notes.  Press "x" to "eXit" from that mode.  Also remember
+   that notes are drawn only with the length selected by the "notes" button
+   near the top of the pattern window.  There are some other tricks to editing
+   that are described later.
 
 \subsection{Pattern Editor / First Panel}
 \label{subsec:seq64_pattern_editor_first}
