--- a/tex/seq64_references.tex
+++ b/tex/seq64_references.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-02-13
+% \update      2016-03-12
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -126,7 +126,13 @@
    Chris Ahlstrom.
    \emph{A continuation of the Sequencer64 project as "Sequencer64".}
    \url{https://github.com/ahlstromcj/sequencer64/}
-   2015.
+   2016.
+
+   \bibitem{sequencer64doc}
+   Chris Ahlstrom.
+   \emph{The Sequencer64 User Manual.}
+   \url{https://github.com/ahlstromcj/sequencer64-doc/}
+   2016.
 
    \bibitem{subatomicglue}
    Kevin at subatomicglue.com
