Added all-mute and progress bar descriptions.

--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-03-13
+% \update      2016-03-16
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -49,6 +49,13 @@
    that notes are drawn only with the length selected by the "notes" button
    near the top of the pattern window.  There are some other tricks to editing
    that are described later.
+
+   Also new with \textsl{Sequencer64}, and not in \textsl{Seq64}, is the
+   automatic horizontal scrolling of the sequence/pattern editor window when
+   playback moves the progress bar outside of the current frame of data.  This
+   feature makes it easier to follow patterns that are longer than a measure or
+   two.  Note that \textsl{Sequencer64} still needs a way to restart the
+   progress bar without resetting it to the beginning of the pattern.
 
 \subsection{Pattern Editor / First Panel}
 \label{subsec:seq64_pattern_editor_first}
