--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-01-18
+% \update      2016-03-15
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -274,6 +274,13 @@
    \index{song editor!muting}
    Left-clicking on the pattern name or the "M" button toggles the muting
    (arming) status of the track.
+
+   \index{patterns column!ctrl left click}
+   \index{song editor!inverse muting}
+   Shift-left-clicking on the pattern name or the "M" button toggles the muting
+   (arming) status of \textsl{all other tracks} except the track that was
+   selected.  This action is useful for quickly listening to a single sequence
+   in isoloation.
 
    \index{patterns column!right click}
    Right-clicking on the pattern name or the "M" button brings up the same
